user-scripts/www.youtube.com/stylesheets/related-videos-self-scroll.css
html {
  overflow: auto !important;
}

html:fullscreen {
  overflow: hidden !important;
}

body:not(:root):not(:root) {
  overflow: visible !important;
}

/* Fix issue with ytd-app in fullscreen which affect the video inside the player */
ytd-app {
  position: static !important;
  /* right: 0 !important; */
}

/* Fix collapsing margin issue */
ytd-app > #content {
  display: flow-root !important;
}

/* Navbar */
/* ytd-app #masthead-container {
  position: sticky !important;
  top: 0 !important;
} */

ytd-page-manager {
  /* margin-top: 0 !important; */

  overflow: visible !important;
}

/* Allow chip tags to use position sticky */
ytd-browse {
  overflow: visible !important;
}

ytd-rich-grid-renderer > #header {
  position: sticky;
  top: 56px;
  z-index: 999;
  
  overflow: visible;
}

ytd-rich-grid-renderer > #header > #chips-wrapper {
  position: absolute;
  top: 0;
  left: 0;
}


html[data-pathname="/watch"] #secondary {
  box-sizing: border-box;

  position: sticky !important;
  top: 56px;

  width: 450px !important;
  height: 92vh;

  padding-left: 0px;
}

.html5-video-container {
  display: flex;
}

#secondary-inner,
#secondary-inner #related ytd-watch-next-secondary-results-renderer {
  height: 100% !important;
}

#secondary-inner {
  display: flex !important;
  flex-direction: column !important;
}

#secondary-inner #related {
  min-height: 0 !important;
  flex-grow: 1 !important;
  flex-shrink: 1 !important;
}

#secondary-inner {
  padding-bottom: 10px;
  box-sizing: border-box;
}

#secondary-inner #related #items {
  min-height: 0;
}

ytd-playlist-panel-renderer {
  /* Make scroll container a positioned element to make child property `offsetTop` work as expected */
  position: relative !important;
}

#secondary-inner #related #items,
#secondary-inner #related #items > ytd-item-section-renderer {
  overflow-y: auto;
  overflow-x: hidden;
  flex-shrink: 1;
  flex-grow: 1;
  min-height: 0;
}


/* Remove min-height of live chat for it to fit the new layout */
ytd-live-chat-frame {
  min-height: 0 !important;
}



/*
  Hide description and comments in favour of the panels and to avoid main scroll
  making the video player always visible
*/

ytd-watch-flexy #columns > #primary ytd-comments,
ytd-watch-flexy #columns > #primary ytd-watch-metadata #bottom-row {
  display: none;
}


/* Fix player size issue */

html[data-pathname="/watch"] #primary {
  margin-left: 0 !important;
}

html[data-pathname="/watch"] #primary {
  padding-left: 24px;
  padding-right: 0;
}

html[data-pathname="/watch"] #secondary {
  padding-left: 24px;
}

